add required user permission

--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,10 @@
                 <param name="onload" value="true" />
             </feature>
         </config-file>
+
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        </config-file>
         
         <source-file src="src/android/Apkdownloader.java" target-dir="src/com/feedhenry/phonegap/apkdownloader" />
         <source-file src="src/android/AsyncFileDownloader.java" target-dir="src/com/feedhenry/phonegap/apkdownloader" />
