--- a/plugin.xml
+++ b/plugin.xml
@@ -8,7 +8,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="ApkDownloader">
-                <param name="android-package" value="com.feedhenry.phonegap.apkdownloader" />
+                <param name="android-package" value="com.feedhenry.phonegap.apkdownloader.Apkdownloader" />
                 <param name="onload" value="true" />
             </feature>
         </config-file>
